# ANTLR-parser

./: .gitignore  CMakeLists.txt  antlrcpp-explore.sh  run_lexer.sh
c1recognizer/: .gitignore  ide.md
c1recognizer/src/: syntax_tree_builder.cpp
doc/: part2.md  part3.md  part4.md
grammar/: C1Parser.g4
src/antlr4-runtime-4.13.1/: CMakeLists.txt
